# anbuanthonysamy.github.io

./: CNAME  index.html  script.js  styles.css
deals-platform-v2/: CLAUDE.md  (+10 more)
deals-platform-v2/backend/: Dockerfile  pyproject.toml  requirements.txt
deals-platform-v2/backend/app/: config.py  main.py
deals-platform-v2/backend/app/api/: eval.py  mode.py  situations.py  sources.py
deals-platform-v2/backend/app/db/: __init__.py
deals-platform-v2/backend/app/explain/: explainer.py  unsupported_claims.py
deals-platform-v2/backend/app/models/: enums.py  orm.py  schemas.py
deals-platform-v2/backend/app/modules/carve_outs/: api.py  service.py
deals-platform-v2/backend/app/orchestrators/: pipeline.py
deals-platform-v2/backend/app/scanner/: __init__.py  api.py  cs1_helpers.py  cs2_helpers.py  cs2_tier3_helpers.py  jobs.py  service.py  signals.py  tier4_helpers.py
deals-platform-v2/backend/app/scripts/: seed_companies.py  seed_cs3_cs4.py
deals-platform-v2/backend/app/shared/: api_mode.py  evidence.py  hashing.py  ingest.py  llm.py  scheduler.py  source_status.py
deals-platform-v2/backend/app/signals/: registry.py  signals.yaml
deals-platform-v2/backend/app/sources/: base.py  companies_house.py  edgar.py  edgar_structured.py  file_upload.py  fred.py  market.py  news.py  registry.py  stubs.py
deals-platform-v2/backend/fixtures/: companies.json  sp500_ftse100.json
deals-platform-v2/backend/tests/: test_api.py  test_backtest.py  test_curves.py  test_evidence.py  test_scoring_golden.py  test_signal_handlers.py  test_unsupported_claims.py  test_wc_service.py
(+127 files in other folders)
