[project]
name = "deals-platform-backend"
version = "0.1.0"
description = "Deals Platform PoC — four-module backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
live = [
    "feedparser>=6.0",
    "yfinance>=0.2.40",
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "freezegun>=1.5",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
